fixed howizontal scroll issue on mobile modal

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/* * {
+    border: 1px solid red;
+} */
+
 ::-webkit-scrollbar {
     width: 12px;
 }
